# mlops-test

./: .gitignore  CONTRIBUTING.md  FEATURES.md  PROJECT_SUMMARY.md  README.md  pipeline.py  pyproject.toml  requirements.txt  setup.sh  test_deployment.sh  validate_setup.py
.github/workflows/: ci.yml  mlops-pipeline.yml  release.yml
config/: config.yaml  default.yaml
deployments/bentoml/: bentofile.yaml  deploy.sh  save_model.py  service.py
deployments/ray_serve/: Dockerfile  deploy.py  deploy.sh
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: architecture.md  deployment_comparison.md  quickstart.md
examples/: example_request.json  example_response.json  full_pipeline_example.py  quick_start.py
src/: __init__.py
src/features/: __init__.py  feature_engineering.py
src/mlops_pipeline/: __init__.py  cli.py
src/mlops_pipeline/data/: __init__.py  generator.py  processor.py  validator.py
src/mlops_pipeline/monitoring/: __init__.py  drift_detector.py  metrics_collector.py  performance_monitor.py
src/mlops_pipeline/serving/: __init__.py  api.py  model_server.py  predictor.py
src/mlops_pipeline/training/: __init__.py  hyperparameter_tuner.py  model_registry.py  trainer.py
src/mlops_pipeline/utils/: __init__.py  config.py  logger.py
src/models/: __init__.py  train_model.py
tests/unit/: test_config.py
